# dataset-incubator

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PROMOTION_CHECKLIST.md  README.md  batch_all.txt  fixer.py  pyproject.toml  requirements-gcs.txt  requirements.txt  run_full.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-candidate.yml  promotion.yml
.github/scripts/: audit_test_markers.py
.github/workflows/: build-pipeline-signals.yml  lint.yml  monitor-triage.yml  post-merge-candidate.yml  post-merge-reminder.yml  pr-toolkit-check.yml  sample-candidate-run.yml  smoke-weekly.yml  test-audit.yml  validate-candidate-structure.yml  (+3 more)
batches/: ckan.txt  green.txt  http.txt  sdmx.txt  sparql.txt
docs/: scouting-checklist.md  source-check-template.md
registry/: _key_synonyms.py  active.md  archived.md  clean_catalog.json  clean_catalog.schema.json  costituzione-mapping.yaml  join_map.yaml  pipeline_signals.json  pipeline_signals.schema.json  relations-appalti.yaml  relations-enti.yaml  relations-giustizia.yaml  relations-territorio.yaml  relationship_map.json  validate_relations.py
reports/: validation-quick.json
scripts/: __init__.py  _candidate_helpers.py  _catalog_helpers.py  build_clean_catalog.py  build_pipeline_signals.py  create_dcl_analysis_issue.py  create_de_followup_issue.py  detect_candidates.py  detect_sample_mode.py  get_extra_ca_cert_urls.py  notebook_helpers.py  post_merge_runner.py  prefetch_blocked_sources.py  push_archive.py  resolve_sample_run.py  run_compose_with_support.py  run_support_datasets.py  scaffold_candidate.py  smoke_batch.py  triage_monitor_diff.py  update_pipeline_sample_runs.py  validate_candidate_structure.py  validate_effective_root.py  weekly_probe.py
skills/: README.md  intake-candidate.md  post-merge-candidate.md  run-candidate.md
templates/: dataset-notes.md  preproject.md
tests/: conftest.py  test_build_clean_catalog_derive.py  test_build_pipeline_signals.py  test_candidate_helpers.py  test_catalog_pure_units.py  test_clean_query_build_relationship_map.py  test_clean_query_catalog.py  test_clean_query_pure_units.py  test_clean_query_sql_guards.py  test_create_de_followup_issue.py  test_detect_candidates.py  test_get_extra_ca_cert_urls.py  test_pipeline_sample_runs.py  test_post_merge_runner.py  test_prefetch_blocked_sources.py  test_resolve_sample_run.py  test_scaffold_candidate.py  test_toolkit_integration.py  test_triage_monitor_diff.py  test_validate_candidate_structure.py
workflows/: README.md  intake-candidate.md  post-merge-candidate.md  run-candidate.md
(+882 files in other folders)
