[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dataciviclab-dataset-incubator"
dynamic = ["version"]
description = "DataCivicLab Dataset Incubator: intake, validazione e promozione dataset"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  { name = "DataCivicLab" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  # toolkit e lab-connectors sono pinnati in requirements.txt (fonte di verità CI)
  "jsonschema>=4.0",
  "mcp>=1.26.0",
]

[project.optional-dependencies]
gcs = [
  "google-cloud-storage>=3.10.1",
  "google-cloud-bigquery>=3.41.0",
  "pandas>=3.0.3",
  "pyarrow>=24.0.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.3.0",
  "ruff>=0.3.0",
  "mypy>=1.20",
  "build>=1.4.3",
  "twine>=5.0.0",
]

[project.scripts]
clean-query-mcp = "tools.clean_query_mcp.server:main"

[project.urls]
Repository = "https://github.com/dataciviclab/dataset-incubator"

[tool.setuptools.packages.find]
include = ["scripts", "scripts.*", "tools", "tools.*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = { attr = "scripts.__version__" }

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-q --tb=line --timeout=30"
markers = [
    "contract: interfaccia pubblica, artifact format, contratto API, path contract, output CI",
    "policy: regola Lab non ovvia o comportamento cross-component",
    "regression: bug fix documentato in issue/PR",
    "adapter: adapter a servizio esterno (GCS, BigQuery, HTTP)",
    "pure_unit: logica pura non banale, zero side effect",
    "smoke: test che fa chiamate reali (richiede connettivita')",
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
no_implicit_optional = true
ignore_missing_imports = true
disallow_untyped_defs = false

# push_archive.py richiede google-cloud-storage (non in dev)
exclude = ["scripts/push_archive.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
